img position change

--- a/index.html
+++ b/index.html
@@ -139,20 +139,20 @@
                   />
                 </div>
               </div>
-              <div class="py-4 lg:h-screen lg:overflow-y-hidden">
+              <div class="pb-4 lg:h-screen lg:overflow-y-hidden">
                 <div class="mx-0 max-w-xl flex rounded-2xl pb-3 lg:px-0 px-6">
                   <div class="swiper-container flex-col flex">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide">
                         <blockquote
-                          class="text-left bg-slate-900 rounded-b-2xl"
+                          class="text-left bg-slate-900 rounded-2xl py-10"
                         >
                           <div class="relative">
                             <div class="relative">
                               <img
                                 src="./assets/img1.jpg"
                                 alt="aji"
-                                class="object-cover w-full h-96 mx-auto rounded-t-2xl"
+                                class="h-96 mx-auto rounded-t-2xl"
                               />
                               <div
                                 class="rounded-t-2xl absolute bg-gradient-to-t from-gray-800 opacity-75 inset-0 z-0"
@@ -197,14 +197,14 @@
 
                       <div class="swiper-slide">
                         <blockquote
-                          class="text-left bg-slate-900 rounded-b-2xl"
+                          class="text-left bg-slate-900 rounded-2xl py-10"
                         >
                           <div class="">
                             <div class="relative">
                               <img
                                 src="./assets/img2.jpg"
                                 alt="aji"
-                                class="object-cover w-full mx-auto rounded-t-2xl h-96"
+                                class="mx-auto rounded-t-2xl h-96"
                               />
                               <div
                                 class="rounded-t-2xl absolute bg-gradient-to-t from-gray-800 opacity-75 inset-0 z-0"
@@ -248,14 +248,14 @@
 
                       <div class="swiper-slide">
                         <blockquote
-                          class="text-left bg-slate-900 rounded-b-2xl"
+                          class="text-left bg-slate-900 rounded-2xl py-10"
                         >
                           <div class="">
                             <div class="relative">
                               <img
                                 src="./assets/img3.jpg"
                                 alt="aji"
-                                class="object-fit w-full mx-auto rounded-t-2xl h-96"
+                                class="mx-auto rounded-t-2xl h-96"
                               />
                               <div
                                 class="rounded-t-2xl absolute bg-gradient-to-t from-gray-800 opacity-75 inset-0 z-0"
