--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         padding: 0;
       }
     </style>
-    <title>Shreya's Birthday</title>
+    <title>Happy Birthday Shreya</title>
   </head>
   <body>
     <main class="w-full min-h-screen">
